# polymarket-graph-study

./: .gitignore  README.md  pyproject.toml
config/: project.example.toml  project.synthetic.toml  project.toml
notebooks/: 01_experiment_walkthrough.ipynb
outputs/tables/: dataset_summary.csv  dataset_summary.md  results_table.csv  results_table.md
reports/: final_report.tex  final_report_template.md
src/mlns_project/: __init__.py  __main__.py  config.py  data_loading.py  dataset.py  evaluation.py  graphs.py  modeling.py  pipeline.py  reporting.py  synthetic.py
src/mlns_project/cli/: __init__.py  generate_synthetic.py  run_pipeline.py
tests/: test_pipeline.py
