[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlns-project"
version = "0.1.0"
description = "MLNS project workspace for graph-aware prediction on Polymarket crypto markets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
where = ["src"]

